Camino only: Bug 322093 - Bookmark Import rewrite with progress window and performance improvements (performs majority of import in background thread).  Patch by David Haas r=hwaara sr=pink